fix issues by sonar