@@ -7,8 +7,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
-
 
 public abstract class AbstractAttributeAuthorityConverter<A, B>
         implements Iso8601TimestampCompatible {
@@ -28,9 +26,7 @@ public abstract class AbstractAttributeAuthorityConverter<A, B>
     public Collection<B> fromAttributeAuthorityModelCollection(Collection<A> attributeAuthorityModelCollection) {
         return CollectionUtils.isEmpty(attributeAuthorityModelCollection) ?
                Collections.emptyList():
-               attributeAuthorityModelCollection.stream()
-                                                .map(fromAttributeAuthorityModelFunction())
-                                                .collect(Collectors.toList());
+               attributeAuthorityModelCollection.stream().map(fromAttributeAuthorityModelFunction()).toList();
     }
 
     public Optional<A> toAttributeAuthorityModel(Optional<B> maybeBackofficeModel) {
@@ -44,40 +40,25 @@ public abstract class AbstractAttributeAuthorityConverter<A, B>
     public Collection<A> toAttributeAuthorityModelCollection(Collection<B> backofficeModelCollection) {
         return CollectionUtils.isEmpty(backofficeModelCollection) ?
                Collections.emptyList():
-               backofficeModelCollection.stream().map(toAttributeAuthorityModelFunction()).collect(Collectors.toList());
+               backofficeModelCollection.stream().map(toAttributeAuthorityModelFunction()).toList();
     }
 
     public ResponseEntity<B> fromAttributeAuthorityResponse(ResponseEntity<A> attributeAuthorityResponse) {
-        switch (attributeAuthorityResponse.getStatusCode()) {
-            case OK:
-            case NOT_MODIFIED:
-                return ResponseEntity.ok().body(fromAttributeAuthorityModel(attributeAuthorityResponse.getBody()));
-            case INTERNAL_SERVER_ERROR:
-            case NO_CONTENT:
-            case ACCEPTED:
-            case FOUND:
-            case BAD_REQUEST:
-            case UNAUTHORIZED:
-            case FORBIDDEN:
-            case NOT_FOUND:
-            case METHOD_NOT_ALLOWED:
-            default:
-                return ResponseEntity.status(attributeAuthorityResponse.getStatusCode()).build();
-        }
+        return switch (attributeAuthorityResponse.getStatusCode()) {
+            case OK, NOT_MODIFIED ->
+                    ResponseEntity.ok().body(fromAttributeAuthorityModel(attributeAuthorityResponse.getBody()));
+            default -> ResponseEntity.status(attributeAuthorityResponse.getStatusCode()).build();
+        };
     }
 
     protected Optional<B> convertFromAttributeAuthorityModel(Optional<A> maybeAttributeAuthorityModel,
                                                              Function<A, B> function) {
-        return maybeAttributeAuthorityModel.isEmpty() ?
-               Optional.empty():
-               Optional.of(function.apply(maybeAttributeAuthorityModel.get()));
+        return maybeAttributeAuthorityModel.map(function::apply);
     }
 
     protected Optional<A> convertToAttributeAuthorityModel(Optional<B> maybeAttributeAuthorityModel,
                                                            Function<B, A> function) {
-        return maybeAttributeAuthorityModel.isEmpty() ?
-               Optional.empty():
-               Optional.of(function.apply(maybeAttributeAuthorityModel.get()));
+        return maybeAttributeAuthorityModel.map(function::apply);
     }
 
 }
